[package]
name = "netmap-rs"
version = "0.1.0"
edition = "2024"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com"]
description = "Safe, zero-cost abstractions for Netmap kernel-bypass networking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kyle6012/netmap-rs"
keywords = ['networking', 'zero-copy', 'netmap', 'low-latency', 'ffi']
categories = ['network programming', 'api-bindings']
readme = 'README.md'

[features]
default = []
sys = ['netmap-min-sys']
fallback = []

[dependencies]
bitflags = "2.0"
core_affinity = { version = "0.8", optional = true }
crossbeam = { version = "0.8", optional = true }
libc = "0.2"
netmap-min-sys = { path ='netmap-min-sys', optional = true }
reed-solomon-erasure = { version = "6.0.0", optional = true}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
tempfile = "3.3"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[example]]
name= "ping-pong"

[[example]]
name = "sliding_window_arq"

[[example]]
name = "fec"
