[package]
name = "netmap-rs"
version = "0.1.2"
edition = "2024"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Safe, zero-cost abstractions for Netmap kernel-bypass networking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kyle6012/netmap-rs"
keywords = ['networking', 'zero-copy', 'netmap', 'low-latency', 'ffi']
categories = [ 'api-bindings']
readme = 'docs/README.md'

[features]
default = []
sys = ['netmap-min-sys', 'core_affinity', 'reed-solomon-erasure'] # For FEC example
fallback = ['core_affinity'] # Also include for thread_per_ring example under fallback
tokio-async = ["tokio", "netmap-min-sys"] # tokio-async also implies sys for Netmap struct

[dependencies]
bitflags = "2.0"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"], optional = true }
core_affinity = { version = "0.8", optional = true }
crossbeam = { version = "0.8", optional = true }
libc = "0.2"
netmap-min-sys = { version = "0.1.2", optional = true }
reed-solomon-erasure = { version = "6.0.0", optional = true}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
tempfile = "3.3"
ctrlc = { version = "3.2", features = ["termination"] }
polling = "3.2" # For polling example

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[example]]
name= "ping_pong"

[[example]]
name = "sliding_window_arq"

[[example]]
name = "fec"

[[example]]
name = "thread_per_ring"
