[package]
name = "netmap-min-sys"
version = "0.1.0"
edition = "2024"
authors = ["Meshack Bahati Ouma ,bahatikylemeshack@gmail.com>"]
description = "Raw FFI bindings for Netmap"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kyle6012/netmap-rs.git"
keywords = ['networking', 'ffi', 'netmap']
categories = ["api-bindings"]

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
libc = "0.2.172"
